<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.bulsu.mathpad.fragment.SolverFragment">

    <Button
        android:id="@+id/btnSolver"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_default_background"
        android:text="@string/solver1"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorBlack"
        android:typeface="serif"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnSolver2"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_default_background"
        android:text="@string/solver2"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorBlack"
        android:typeface="serif"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnSolver3"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_default_background"
        android:text="@string/solver3"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorBlack"
        android:typeface="serif"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnSolver4"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_default_background"
        android:text="@string/solver4"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorBlack"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnSolver5"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_default_background"
        android:text="@string/solver5"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorBlack"
        android:typeface="serif" />

</LinearLayout>
